--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ input {
   display: block;
   margin-bottom: 10px;
   padding: 5px;
-  width: 100%;
+  width: 80%;
   border: 1px solid lightgrey;
   border-radius: 3px;
   font-size: 16px;
@@ -61,16 +61,15 @@ li {
   margin-bottom: 5px;
 }
 
-footer {
-  margin-top: 50px;
-  padding-top: 25px;
-  border-top: 1px solid lightgrey;
+
+.row{
+  background-color:#0FA3B1;
+  border: 5px #D9E5D6;
+  margin:10px; 
+   display:inline-block;
+   border-radius:25px;
+   padding:10px;
+   width:80%;
+   height:100%;
 }
 
-footer > a {
-  color: #BBBBBB;
-}
-
-.nicejob {
-  text-decoration: line-through;
-}
