--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
 
 h1 {
   font-weight: bold;
-  color: pink;
+  color:#083D77;
+  margin:0 0 0 300px;
 }
 
 .bold {
@@ -31,10 +32,11 @@ form {
 }
 
 input {
-  display: block;
+ 
   margin-bottom: 10px;
+  margin-left:150px;
   padding: 5px;
-  width: 80%;
+  width: 50%;
   border: 1px solid lightgrey;
   border-radius: 3px;
   font-size: 16px;
@@ -47,6 +49,7 @@ button {
   border: 1px solid grey;
   box-shadow: 2px 2px teal;
   cursor: pointer;
+   
 }
 
 button:hover {
@@ -57,19 +60,27 @@ button:active {
   box-shadow: none;
 }
 
+#searchBtn{
+  margin-left:150 px;
+  text-decoration: underline;
+  display:inline-block;
+}
+
 li {
   margin-bottom: 5px;
 }
 
 
 .row{
-  background-color:#0FA3B1;
-  border: 5px #D9E5D6;
+  background-color:lightyellow;
+  border: 5px black;
   margin:10px; 
    display:inline-block;
-   border-radius:25px;
+   border-radius:0px;
    padding:10px;
    width:80%;
    height:100%;
+   box-shadow: 10px 10px 5px #888888;
 }
+
 
